# boundless

./: .gitignore  .mcp.json.template  DEFERRED.md  README.md  SETUP.md  rust-toolchain.toml
.claude/: CLAUDE.md  settings.json.template
.claude/agents/: README.md  architect.md  clarifier.md  docs-researcher.md  i18n-validator.md  platform-parity.md  reviewer.md  security-auditor.md  test-strategist.md
.claude/commands/: adr.md  clarify.md  new-spec.md  ship-feature.md  speckit.implement.md  speckit.plan.md  speckit.tasks.md
.claude/hooks/: post-edit.sh  pre-commit.sh  pre-push.sh
.github/workflows/: ci.yml
.specify/memory/: constitution.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/core-bridge/: build.gradle.kts
android/gradle/: libs.versions.toml
api/: boundless.proto  openapi.yaml
api/schemas/: .gitkeep
apple/BoundlessDriver/: Package.resolved  Package.swift  README.md
apple/BoundlessKit/: Package.swift  README.md
apple/BoundlessRider/: Package.resolved  Package.swift  README.md
ci/: forbidden-trackers.txt  network-allowlist.txt
core/: Cargo.toml
core/auth/: Cargo.toml
core/auth/proptest-regressions/: .gitkeep
core/auth/src/: clock.rs  code.rs  device.rs  lib.rs  session.rs  state.rs  version.rs
core/auth/tests/: code.rs  device.rs  error_codes.rs  session.rs  state.rs  version.rs
core/crypto/: Cargo.toml
core/crypto/src/: hashing.rs  lib.rs  manifest.rs  secretbox.rs
core/crypto/tests/: invariants.rs
core/domain/: Cargo.toml
core/domain/src/: ids.rs  lib.rs  platform.rs  role.rs  tainted.rs  version.rs
core/domain/tests/: fixtures_wellformed.rs  serialization_snapshots.rs
core/domain/tests/snapshots/: serialization_snapshots__app_version_serializes_as_string.snap  serialization_snapshots__client_version_serializes_as_platform_and_version.snap  serialization_snapshots__member_id_serializes_transparently_as_uuid_string.snap  serialization_snapshots__platform_serializes_canonical_all_variants.snap  serialization_snapshots__role_serializes_snake_case_all_variants.snap
core/ffi-kotlin/: Cargo.toml
core/ffi-kotlin/src/: lib.rs
core/ffi-swift/: Cargo.toml
core/ffi-swift/src/: lib.rs
core/ffi-swift/tests/: parity_with_kotlin.rs
core/ffi-wasm/: Cargo.toml
core/ffi-wasm/src/: lib.rs
core/logging/: Cargo.toml
core/logging/src/: lib.rs  scrub.rs
core/logging/tests/: onboarding_replay.rs  scrub_redteam.rs
core/server/: Cargo.toml
core/server/src/: admin.rs  admin_webauthn.rs  alerts.rs  audited.rs  bind.rs  bootstrap.rs  hub.rs  lib.rs  member.rs  phone.rs  ports.rs  recovery.rs  refresh.rs  secrets.rs  service.rs  signin.rs
core/server/tests/: admin.rs  audit.rs  bind.rs  compat.rs  error_codes.rs  hub_alerts.rs  member.rs  member_summary_compile.rs  no_formatter.rs  phone.rs  properties.rs  recovery.rs  refresh.rs  require_audit.rs  secrets.rs  signin.rs
core/server/tests/common/: mod.rs
core/server/tests/ui/member_summary/: tainted_field.rs  tainted_field.stderr
core/server/tests/ui/require_audit/: forge_disclosure.rs  forge_disclosure.stderr  send_unaudited.rs  send_unaudited.stderr
core/server/tests/ui/require_audit/pass/: audited_send.rs
core/sync/: Cargo.toml
docs/: a11y-bar.md  architecture.md  domain-glossary.md  error-codes.md  forbidden-patterns.md  operational-invariants.md  personas.md  privacy-invariants.md  stack-matrix.md  update-strategy.md  voice-and-tone.md
docs/adr/: 0001-rust-core.md  0006-role-swaps.md  0013-license.md  0014-server-driven-config.md  0015-admin-invitation-channel.md  README.md  (+12 more)
fixtures/: README.md
scripts/: _bindings_common.sh  bootstrap-group.sh  build-boundlesskit.sh  build-corebridge.sh  check-android-trackers.sh  check-binding-drift.sh  check-network-allowlist.sh  check-proptest-regressions.sh  check-wasm-no-getrandom.sh  check-worker-deploy-guard.sh  check-wrangler-credentials.sh  generate-bindings.sh  provision-neon.sh  seed-admin-invite.sh  setup-worker-test-db.sh  smoke-deployed-admin-web.sh  smoke-deployed-edge.sh  test-binding-drift.sh  test-bootstrap-group.sh  test-boundlessdriver.sh  test-boundlesskit.sh  test-boundlessrider.sh  test-corebridge.sh  test-migrations.sh  test-proptest-regressions.sh  test-provision-neon.sh  test-seed-admin-invite.sh  test-wasm-no-getrandom.sh  test-wrangler-credentials.sh
server/: Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  wrangler.toml
server/migrations/: .gitkeep  0001_groups.down.sql  0001_groups.up.sql  0002_members.down.sql  0002_members.up.sql  0003_onboarding_codes.down.sql  0003_onboarding_codes.up.sql  0004_recovery_codes.down.sql  0004_recovery_codes.up.sql  0005_device_tokens.down.sql  0005_device_tokens.up.sql  0006_sessions.down.sql  0006_sessions.up.sql  0007_admin_webauthn_credentials.down.sql  0007_admin_webauthn_credentials.up.sql  0008_admin_invitations.down.sql  0008_admin_invitations.up.sql  0009_delegated_keys.down.sql  0009_delegated_keys.up.sql  0010_member_pii.down.sql  0010_member_pii.up.sql  0011_audit_log.down.sql  0011_audit_log.up.sql
server/src/: lib.rs
server/src/runtime/: admin_auth.rs  group_hub.rs  members.rs  mod.rs  pg.rs  scaffold_store.rs
server/store/: Cargo.toml
server/store/examples/: bootstrap_group_pg.rs  seed_admin_invite_pg.rs  seed_worker_test_b1_pg.rs  seed_worker_test_pg.rs
server/store/proptest-regressions/: .gitkeep
server/store/src/: lib.rs  members.rs
server/store/tests/: admin_invitations.rs  admin_webauthn.rs  audit.rs  delegated_keys.rs  integration.rs  least_privilege.rs  members.rs  service_pg.rs
server/store/tests/common/: mod.rs
server/test/: admin-members.spec.ts  admin-webauthn-cross-tenant.spec.ts  admin-webauthn.spec.ts  cross-tenant.spec.ts  env.d.ts  worker.spec.ts
server/tests/: migrations.rs
server/tests/compat/: .gitkeep  replay.rs
specs/: README.md
web/: package.json  playwright.config.ts  playwright.deployed.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
(+213 files in other folders)
