# Boundless edge/server — the deployable Cloudflare Workers (workers-rs) crate.
# Kept as its own package (not part of the core workspace) so the pre-push/CI server
# stage builds it independently; it depends on `boundless-server-core` once endpoints
# land. Scaffolded by spec 001 task T01; the deployable Worker skeleton (`#[event]`/Router/
# `GroupHub` DO/KV/Queues) lands in spec 001 **T07-shell-B slice 1**.
#
# This manifest is also the ROOT of a small server workspace (spec 001 T07-shell slice A):
# the `store` member is the NATIVE Postgres AuthStore adapter (tokio-postgres), kept out of
# the core/ workspace so it never pollutes the core's wasm-portability guarantee.
#
# `default-members = ["."]` (the Worker only) is LOAD-BEARING: `worker-build` runs a bare
# `cargo build --lib --target wasm32-unknown-unknown` over the default members. The `store` crate is
# now wasm-buildable (T07-shell-B slice 1) and is the Worker's wasm-target DEPENDENCY (pulled
# transitively when worker-build builds this crate), so it need not — and should not — be a default
# member: keeping it out means worker-build builds only the Worker crate. `store` is still a full
# workspace member, compiled + tested natively by the `server-store` CI job
# (`cargo test -p boundless-server-store`) and linted by `cargo clippy --workspace`. Run
# `cargo test --workspace` for the native build that exercises both crates.
[workspace]
members = ["store"]
default-members = ["."]

[package]
name = "boundless-worker"
version = "0.0.0"
edition = "2021"
rust-version = "1.89"
license = "AGPL-3.0-only"
repository = "https://github.com/notchus/boundless"

# `cdylib` is what `worker-build` bundles into the wasm module; `rlib` keeps the crate linkable
# as a normal library so the native `[[test]] compat` harness still builds (the Worker runtime
# itself is `#[cfg(target_arch = "wasm32")]`, so a native `cargo build`/`test` compiles only the
# cfg-empty lib + the compat test — the `worker` dep below is wasm-only).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The functional core (P4): the Worker is a thin adapter over `boundless-server-core`'s
# `AuthService` + ports + `GroupHubState`, so server *logic* cannot drift from what the clients
# render. All four core crates are pure + wasm32-safe (proven by the core's wasm build gates); they
# are used only by the `#[cfg(target_arch = "wasm32")]` runtime module, so a native build compiles
# them but links nothing from the runtime. `boundless-server-store` (tokio-postgres) is a WASM-TARGET
# dependency (below) — the real PgAuthStore data path; it is wasm-buildable since T07-shell-B slice 1.
boundless-server-core = { path = "../core/server" }
boundless-auth = { path = "../core/auth" }
boundless-crypto = { path = "../core/crypto" }
boundless-domain = { path = "../core/domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parse-only (the GROUP_ID env var → tenant Uuid); no `v4`/`rng` feature → no getrandom on the wasm path.
uuid = { version = "1", default-features = false }

# workers-rs runtime — WASM TARGET ONLY (the crate is wasm-only and does not build natively). The
# `#[event]`/`#[durable_object]` macros are re-exported by `worker` (no separate `worker-macros`
# dep). Pinned 0.8.3 (latest non-yanked on crates.io, verified 2026-06-07; lock = ground truth).
# MIT OR Apache-2.0.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# `queue` feature gates `Env::queue` (the ADMIN_ALERTS fanout, §10-E).
worker = { version = "0.8.3", features = ["queue"] }
# The real Postgres data path (T07-shell-B PgAuthStore slice). The Worker drives `PgAuthStore` over a
# Hyperdrive `worker::Socket` and names `tokio_postgres::{Config, NoTls, Client}` directly for the
# transport (`Config::connect_raw`). Both are WASM-TARGET ONLY: `boundless-server-store` is native +
# wasm via its own target-split (slice 1); the Worker only ever uses it on wasm. `js` wires getrandom's
# wasm_js backend for tokio-postgres's SCRAM nonce (the same getrandom 0.4 backend core-crypto/dryoc
# already use — no new getrandom major); `with-uuid-1` matches the store's set (Cargo unifies anyway).
boundless-server-store = { path = "store" }
tokio-postgres = { version = "0.7", default-features = false, features = ["with-uuid-1", "js"] }
# The live Worker CSPRNG (spec 008 T09, ADR-0021): the Worker — NOT the core — holds randomness, so a
# getrandom-backed `RngCore + CryptoRng` (`GetrandomRng` in runtime/members.rs) is injected into the
# core's `RngSecretSource` (member-issuance nonces + Onboarding Codes). `rand_core` is traits-only
# (`default-features = false` → no getrandom of its own); `getrandom`'s `wasm_js` backend (Web Crypto,
# present in workerd) is the SAME 0.4 backend core-crypto/dryoc + tokio-postgres already use — no new
# getrandom major. Both already resolve in the lock (rand_core 0.9.5 / getrandom 0.4.2).
rand_core = { version = "0.9", default-features = false }
getrandom = { version = "0.4", features = ["wasm_js"] }
# base64url-no-pad DECODE of the inbound B1 admin-WebAuthn wire bytes (`credential_id`/`public_key`/
# `aaguid` — spec 009 T04, ADR-0027). The `core/server` DTOs ENCODE with this same convention; the
# Worker only decodes inbound. Already a workspace dep (promoted to a runtime dep of `core/server` at
# spec 009 T02) — adding this edge introduces NO new crate version (0.22.1 in the lock). Pure-Rust,
# wasm32-safe, no getrandom. MIT OR Apache-2.0.
base64 = "0.22"

[dev-dependencies]
# T08 — the N-2 compatibility replay harness (AC9, `tests/compat/`). It replays the frozen
# request fixtures in `fixtures/compat/**` through the core version policy (`boundless-auth`'s
# evaluate_version / minimum_supported), proving the server accepts the current minor and the two
# previous supported minors and degrades only below the floor (O1/O4). Native, dev-only.
boundless-auth = { path = "../core/auth" }
boundless-domain = { path = "../core/domain" }

# The compat harness lives in a directory (per AC9 / the task), so it is declared explicitly rather
# than auto-discovered (cargo only auto-discovers `tests/*.rs`, not `tests/<dir>/`).
[[test]]
name = "compat"
path = "tests/compat/replay.rs"
