[package]
name = "boundless-ffi-kotlin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# UniFFI binding crate → the `BoundlessCore` AAR for Android (spec 001 Android bring-up,
# mirrors the Swift leg's BoundlessKit).
#   - "cdylib" → the per-ABI `libboundless_ffi_kotlin.so` cross-compiled by cargo-ndk and
#     packaged into the core-bridge module's jniLibs; also the host `.dylib`/`.so` whose
#     embedded UniFFI metadata `uniffi-bindgen` reads in "library mode" to emit Kotlin.
#   - "lib"    → so the crate's own `#[cfg(test)]` round-trip tests build/run on host.
# (No "staticlib" — that is the iOS-only shape; Android links the `.so` at runtime via JNA.)
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Apple/Android-only tooling — never on the wasm path. Mirror types here keep the core
# crates uniffi-free (ADR-0022). The surface is kept IDENTICAL to core/ffi-swift.
uniffi = { workspace = true }
boundless-domain = { workspace = true }
boundless-auth = { workspace = true }

[features]
# Enables the `uniffi-bindgen` CLI binary (HOST-ONLY). Deliberately NOT enabled for the
# Android `.so` build (cargo-ndk `cargo build --lib`), so clap & friends never compile into
# the shipped library. The build script turns it on only for the host bindgen run.
bindgen = ["uniffi/cli"]

# The uniffi-bindgen entry point (library mode). Gated behind `bindgen` so it is built only
# on the host when generating Kotlin — see scripts/build-corebridge.sh.
[[bin]]
name = "uniffi-bindgen"
required-features = ["bindgen"]
