[package]
name = "boundless-ffi-swift"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# UniFFI scaffolding (and the `crate-type = ["staticlib", "cdylib"]` lib target) is
# added at the contract freeze in T10.
