[package]
name = "boundless-ffi-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# wasm-bindgen scaffolding (and the `crate-type = ["cdylib"]` lib target) is added at
# the contract freeze in T10. Admin-web use is limited to validation / WebAuthn shapes.
