[package]
name = "boundless-server-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The member-auth orchestration engine (spec 001 T07, Layer A). Pure + deterministic + wasm-
# safe: it composes the existing core decisions and exposes the I/O boundary as port traits,
# so the deployable Worker (server/, T07-shell) supplies Cloudflare/Postgres impls and tests
# supply in-memory ones. No new EXTERNAL deps — all pinned in core/Cargo.toml.
boundless-domain.workspace = true
boundless-auth.workspace = true
boundless-crypto.workspace = true
serde = { workspace = true, features = ["derive"] }
# rand_core TRAITS ONLY (default-features off → no getrandom): the RngCore + CryptoRng contract the
# production `RngSecretSource<R>` is generic over. The RNG is INJECTED (no ambient randomness in the
# core; stays wasm32-safe) — same discipline as the injected Clock. ADR-0021. The Worker supplies a
# getrandom-backed CSPRNG; tests supply a seeded one.
rand_core.workspace = true

[dev-dependencies]
# rand_chacha — seeded `ChaCha20Rng` (CryptoRng) so the `RngSecretSource` tests are reproducible.
# proptest — code-consume / alert-dedup invariants (seeds committed, P9). uuid — test ids.
# serde_json — assert the PII-free admin-alert payload shape (deterministic). static_assertions —
# compile-time proof that the secret-bearing response types expose no Debug/Display/Serialize (P2,
# sec-audit F1). pollster — block_on the now-`async` AuthStore/DeviceStore ports in host unit tests
# (the in-memory stub's futures are always ready, so no async runtime is needed — ADR-0020). All
# dev-only / host-only.
proptest.workspace = true
uuid.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
pollster.workspace = true
rand_chacha.workspace = true
