[package]
name = "boundless-server-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The member-auth orchestration engine (spec 001 T07, Layer A). Pure + deterministic + wasm-
# safe: it composes the existing core decisions and exposes the I/O boundary as port traits,
# so the deployable Worker (server/, T07-shell) supplies Cloudflare/Postgres impls and tests
# supply in-memory ones. No new EXTERNAL deps — all pinned in core/Cargo.toml.
boundless-domain.workspace = true
boundless-auth.workspace = true
boundless-crypto.workspace = true
serde = { workspace = true, features = ["derive"] }
# serde_json — promoted from dev to a RUNTIME dep at spec 008 T06 for `audited::admin_response_body`,
# the single sanctioned serialization seam for admin responses (the `AuditedResponse`-bounded body
# the T09 router emits, so PII-response serialization is single-sourced in the core — P4). Pure-Rust,
# wasm32-safe (no getrandom; already a runtime dep of the deployed Worker). Pinned in core/Cargo.toml.
serde_json.workspace = true
# rand_core TRAITS ONLY (default-features off → no getrandom): the RngCore + CryptoRng contract the
# production `RngSecretSource<R>` is generic over. The RNG is INJECTED (no ambient randomness in the
# core; stays wasm32-safe) — same discipline as the injected Clock. ADR-0021. The Worker supplies a
# getrandom-backed CSPRNG; tests supply a seeded one.
rand_core.workspace = true
# zeroize — wipe the transient plaintext per-Group key buffer in `RngSecretSource::fresh_group_key`
# (R2, ADR-0025). `default-features = false` (pinned in core/Cargo.toml) → wasm32-safe, no getrandom,
# and no NEW crate version (zeroize 1.8.2 already resolves transitively; this adds only the edge).
zeroize.workspace = true
# base64 — promoted from a core/crypto dev-dep to a RUNTIME dep here at spec 009 T02 (ADR-0027): the
# Option B1 admin-WebAuthn wire DTOs (`AdminCredential`/`AdminInviteRecord`, `admin_webauthn.rs`)
# serialize their `bytea` fields (credential_id/public_key/aaguid) as base64url-no-pad. The serde
# adapter lives where the wire DTO + serde already live (single-sourced field shape, P4 — the seam
# the spec-001 `ManifestPointer` miss came through). Pure-Rust, wasm32-safe, no getrandom; already a
# workspace dep (core/crypto), so this adds NO new crate version — only the dependency edge.
base64.workspace = true
# uuid (serde feature, off the wasm randomness path — no v4/rng, per the workspace pin) — the B1
# `AdminInviteRecord.group_id` wire field serializes as the canonical hyphenated UUID. Promoted from a
# dev-dep to a RUNTIME edge here at spec 009 T02; same 1.x already pinned for `core::domain`'s
# `MemberId`, so NO new crate version — only the dependency edge.
uuid.workspace = true

[dev-dependencies]
# rand_chacha — seeded `ChaCha20Rng` (CryptoRng) so the `RngSecretSource` tests are reproducible.
# proptest — code-consume / alert-dedup invariants (seeds committed, P9). uuid — test ids.
# static_assertions — compile-time proof that the secret-bearing response types expose no
# Debug/Display/Serialize (P2, sec-audit F1) + the T06 `MemberDetailView`/`PiiDisclosure` trait
# memberships. pollster — block_on the now-`async` AuthStore/DeviceStore ports in host unit tests
# (the in-memory stub's futures are always ready, so no async runtime is needed — ADR-0020). All
# dev-only / host-only. (serde_json moved to a RUNTIME dep at T06 — see above; tests still use it.)
proptest.workspace = true
uuid.workspace = true
static_assertions.workspace = true
pollster.workspace = true
rand_chacha.workspace = true
# trybuild — the I5 require-audit COMPILE-FAIL gate (spec 008 T06): proves that forging the
# `PiiDisclosure` audited carrier, serializing the bare `MemberDetailView`, or sneaking a tainted
# field into a PII-free `Serialize` projection all FAIL TO BUILD. Host-only/dev-only (never on the
# wasm path) — see core/Cargo.toml. Pinned there; lock = ground truth.
trybuild.workspace = true
