# boundless-server-store — the Postgres-backed AuthStore data-access layer (spec 001 T07-shell
# slice A). NATIVE crate (tokio-postgres): it is NOT compiled to the Workers wasm target. It
# implements the SQL + transaction logic for the member-auth store contracts (atomic
# supersede-then-insert, rotate-vs-replay, RLS tenant scoping) and is exercised by real-Postgres
# integration tests (server/store/tests). The deployable Worker (T07-shell-B) drives the same
# tokio-postgres queries over a Hyperdrive `worker::Socket`; wiring it into the (currently sync)
# core/server `AuthService` is the async-port bridge, also deferred (see DEFERRED.md, ADR-0019).
[package]
name = "boundless-server-store"
version = "0.0.0"
edition = "2021"
rust-version = "1.89"
license = "AGPL-3.0-only"
repository = "https://github.com/notchus/boundless"

[dependencies]
# The port record types this adapter returns are single-sourced from core/server (P4): MemberRecord,
# OnboardingCodeRow, RecoveryCodeRow, FamilyInfo, RefreshClassification. boundless-auth supplies
# Session / SessionFamilyStatus / RefreshPresentation / UnixSeconds; boundless-crypto the keyed
# hashes + constant-time matchers; boundless-domain the ids / Role / tainted token types.
boundless-server-core = { path = "../../core/server" }
boundless-auth = { path = "../../core/auth" }
boundless-crypto = { path = "../../core/crypto" }
boundless-domain = { path = "../../core/domain" }

# Stable IDs (uuid::Uuid <-> Postgres `uuid`, via tokio-postgres's `with-uuid-1`).
uuid = "1"

# Postgres driver — `0.7` resolves to 0.7.17 in Cargo.lock (latest published; verified via
# docs-researcher; MIT OR Apache-2.0; lock = ground truth). Every query uses the UNNAMED `query_typed*`
# / `execute_typed` family (ADR-0024), so no prepared-statement name caching is relied on — the
# pooler-safe path Hyperdrive needs. `with-uuid-1` is the only type feature (uuid::Uuid <-> `uuid`);
# SystemTime<->timestamptz, bytea, text[] are built-in. The dep is TARGET-SPLIT so the SAME store code
# compiles for BOTH native (tests, direct TcpStream) and wasm32 (the Worker over a Hyperdrive Socket, P4
# single-source). The lib takes an already-connected `Client` and never calls `connect`/`connect_raw`
# itself, so its body is transport-agnostic; the Worker connects via
# `env.hyperdrive(..)?.connect()? -> Socket` → `Config::connect_raw(socket, NoTls)` (slice 2).

# Native (the `server-store` CI job + local `cargo test`): keep the default `runtime` feature — it
# provides `tokio::net`/`time` + the `NoTls`-over-`TcpStream` that `tokio_postgres::connect` needs.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }

# wasm32 (the deployable Worker): drop `runtime` — `tokio/net`+`time`+`socket2` are native-only, and the
# only `rand`-using module (`connect`) is `#[cfg(feature = "runtime")]`, so it is excluded. Add `js` →
# `getrandom/wasm_js` (the SCRAM-auth nonce) — the SAME getrandom 0.4 `wasm_js` backend core-crypto/dryoc
# already use, so no new getrandom major enters the lock.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio-postgres = { version = "0.7", default-features = false, features = ["with-uuid-1", "js"] }

[dev-dependencies]
# Drive the tokio-postgres Connection future + spawn concurrent tasks in the integration tests (native).
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
# Random Group key + nonce for the operator-only Group-bootstrap example (examples/bootstrap_group_pg.rs).
# DEV-only + native/host (examples are never built for wasm; default features → the OS RNG backend, no
# `wasm_js` needed). Already resolved as 0.4.2 in Cargo.lock (the Worker's `wasm_js` backend) → no new
# crate version. Not on the non-dev wasm tree (the no-getrandom CI gate is unaffected). Not a tracker.
getrandom = "0.4"
# Property tests (P9): the random two-group RLS-isolation proof (`prop_rls_isolates_random_two_group_configs`).
# Same major as the core crates' proptest (1.11.x in the core lock); host/native dev-only — never on the
# wasm path. Failing seeds persist to `server/store/proptest-regressions/` (committed; P9 reproducibility).
proptest = "1"
